# TelegramTicketSystem

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
config/: executors.yaml
docs/: SMOKE.md  SPEC.md
services/core/: Dockerfile  alembic.ini  pyproject.toml
services/core/migrations/: env.py
services/core/migrations/versions/: 20260521_0001_initial_core_schema.py  20260521_0002_ticket_create_correlation.py  20260521_0003_ticket_inbox_correlation.py  20260521_0004_customer_menu_correlation.py  20260521_0005_team_group_topic_setup.py
services/core/src/core/: __init__.py  config.py  main.py
services/core/src/core/domain/: __init__.py  admin.py  inbox_render.py  menu.py  menu_render.py  onboarding.py  team_group.py  ticket.py
services/core/src/core/handlers/: __init__.py  daily_digest.py  tg_bot_membership_changed.py  tg_callback.py  tg_message.py  tg_message_sent.py  tg_topic_created.py  ticket_assigned.py  ticket_created.py
services/core/src/core/repository/: __init__.py  base.py  customers.py  executors.py  fsm.py  models.py  processed_events.py  team_group.py  ticket_events.py  tickets.py
services/core/src/core/services/: __init__.py  admin_commands.py  assign_ticket.py  close_ticket.py  create_ticket.py  daily_digest.py  expire_creating_prompt.py  handle_menu_callback.py  incoming_card.py  load_executors.py  onboard_customer.py  setup_team_group.py
services/gateway-tg/: Dockerfile  pyproject.toml
services/gateway-tg/src/gateway_tg/: __init__.py  config.py  main.py
services/gateway-tg/src/gateway_tg/inbound/: __init__.py  converters.py  dispatcher.py  webhook.py
services/gateway-tg/src/gateway_tg/outbound/: __init__.py  executor.py  mappers.py
services/notifications/: Dockerfile  pyproject.toml
services/notifications/migrations/: env.py
services/notifications/src/notifications/: __init__.py  config.py  main.py
services/scheduler/: Dockerfile  pyproject.toml
services/scheduler/src/scheduler/: __init__.py  config.py  main.py
services/sheets-sync/: Dockerfile  pyproject.toml
services/sheets-sync/migrations/: env.py
services/sheets-sync/migrations/versions/: 20260521_0001_initial_sheets_sync.py
services/sheets-sync/src/sheets_sync/: __init__.py  config.py  main.py  sheets_client.py
services/sheets-sync/src/sheets_sync/handlers/: __init__.py  ticket_events.py
services/sheets-sync/src/sheets_sync/repository/: __init__.py  base.py  models.py  state.py
services/sheets-sync/src/sheets_sync/services/: __init__.py  sync_ticket.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  config.py  logging.py
shared/src/shared/bus/: __init__.py  broker.py
shared/src/shared/db/: __init__.py  session.py
shared/src/shared/events/: __init__.py  base.py  dispatch.py  schedule.py  streams.py  tg.py  ticket.py
specs/: 001-customer-menu.md  002-create-ticket.md  003-take-ticket.md  004-close-ticket.md  005-onboard-customer.md  006-onboard-team-group.md  007-admin-commands.md  008a-gateway-tg-inbound-and-basic-outbound.md  008b-gateway-tg-forum-and-webhook.md  009-sheets-sync-scheduler-digest.md
tests/integration/: conftest.py  test_admin_commands.py  test_assign_ticket.py  test_close_ticket.py  test_create_ticket.py  test_daily_digest.py  test_menu_callback.py  test_onboard_customer.py  test_setup_team_group.py  test_sheets_sync.py
tests/unit/: test_inbound_converters.py  test_menu_fsm.py  test_outbound_executor.py  test_scheduler.py  test_ticket_parsing.py  test_webhook.py
