[project]
name = "shared"
version = "0.1.0"
description = "Shared code for ticket-bot services: event schemas, bus wrapper, db utils, logging"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "faststream[redis]>=0.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
