[project]
name = "notifications"
version = "0.1.0"
description = "Notification routing: domain event → message → channel"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "pydantic-settings>=2.2",
    "faststream[redis]>=0.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "structlog>=24.1",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notifications"]
