[project]
name = "scheduler"
version = "0.1.0"
description = "APScheduler — time-triggered events (daily digest)"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "pydantic-settings>=2.2",
    "faststream[redis]>=0.5",
    "apscheduler>=3.10",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "structlog>=24.1",
    "tzdata>=2024.1",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduler"]
