[project]
name = "sheets-sync"
version = "0.1.0"
description = "Mirrors ticket events into Google Sheets"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "pydantic-settings>=2.2",
    "faststream[redis]>=0.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "gspread>=6.0",
    "google-auth>=2.28",
    "structlog>=24.1",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sheets_sync"]
